# Bachelorarbeit

./: .directory  .gitignore  1_cubemap_Video_2.json  CMakeLists.txt  Panorama2Cube.py  PanoramaTracking.cpp  PanoramaTracking.h  PanoramaTrackingImplementations.cpp  PanoramaTrackingImplementations.h  Pipfile  README.md  TS_10_5_t01_cubemap.json  TS_10_5whole_frameequator_line  TrackingHelpers.h  Video2.json  analysis_TS_10_5_t01.mp4.data  analysis_Video2.mp4.data  aoi_sorting_TS_10_5.mp4.csv  aoi_sorting_Video2.mp4.csv  color_and_overlap.data  cubetransform.cpp  cubetransform.h  detect.cpp  detect.h  experiment_ts_10_5.json  frame_157maskrcnn_TS_10_5_t01_cubemap.json  hmm_TS_10_5.mp4.csv  hmm_analysis_TS_10_5.mp4.data  main.cpp  maskrcnn_TS_10_5equator_line.json  maskrcnn_Video2equator_line.json  misc_utility.cpp  misc_utility.h  opencv_detect.cpp  opencv_detect.h  opencv_tracking.cpp  opencv_tracking.h  panorama_tracker_ts_10_05.txt  roidata.txt  testMaskRCNN.cpp  (+5 more)
Detectors/: detect.cpp  detect.h  opencv_detect.h  testMaskRCNN.cpp  testMaskRCNN.h
OtherTracking/: PanoramaTracking.cpp  PanoramaTracking.h  PanoramaTrackingImplementations.cpp  PanoramaTrackingImplementations.h  opencv_tracking.h
RegionTracker/: TrackingHelpers.cpp  TrackingHelpers.h  tracking.cpp  tracking.h
data/AOI/: README.txt  TS_10_5.json  TS_10_5_t01.json  Video2.data  Video2.json  Video2Aoi.data  aoi_TS_10_5_lang.data  aoi_from_vid.data  neu_aoi_TS_10_t01.data  neu_ts_10_5.data  playvid.py
data/Annotations/: 2_TS_10_05.xml
data/analysis/: maskRcnn.data
data/analysis/60e07ae451/: analysis_TS_10_5.mp4.data  analysis_TS_10_5_t01.mp4.data  aoi_sorting_TS_10_5.mp4.csv  aoi_sorting_TS_10_5_t01.mp4.csv  aoi_sorting_Video2.mp4.csv  info.txt
data/analysis/71ad3769/: newColorandThresh_analysis.data
data/analysis/a155c7412/: anmerkung  ohne_farbe.data  video2_analysis.data  video_analysis.data
data/analysis/d805eff/: analysisdata.data
data/analysis/e3a0ed9d/: notes.txt  sorting.data
data/analysis/maskRcnn/: maskRcnn.data
eval_data/sot_results/: video_aoi_out.data
